get students list for admin
